<resources>
    <string name="app_name">AutAcc Report</string>
    <string name="title_activity_report_list">ReportList</string>
    <string name="title_activity_report_content">ReportContent</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!--Jaewoong-->
    <string name="loginidBt">ID</string>
    <string name="loginpwBt">PASSWORD: </string>
    <string name="log_in">Log In</string>
    <string name="sign_in">Sign In</string>
    <string name="username">USERNAME: </string>
    <string name="title_activity_searching">Searching</string>

    <string name="button">button</string>string>
    <string name="editText">editText</string>
    <string name="editText2">editText2</string>

    <string name="textView2">textView2</string>
    <string name="button3">button3</string>
    <string name="datePicker">datPicker</string>

    <string name="textView">textView</string>
    <string name="listview">listview</string>
    <string name="textView3">textView3</string>
    <string name="editText4">editText4</string>
    <string name="button2">button2</string>

    <!--Jabneel-->
    <string name="e_videos">Video</string>
    <string name="vid1">Vid1</string>
    <string name="vid2">Vid2</string>
    <string name="vid3">Vid3</string>


    <string name="gps_information">Location</string>
    <string name="add">Add</string>
    <string name="update">Update</string>
    <string name="save">Save</string>
    <string name="call">Call</string>

    <string name="rbc">RBC Insurance</string>
    <string name="td">TD Insurance</string>
    <string name="about">About</string>
    <string name="caa">CAA Insurance</string>
    <string name="des">Desjardins</string>
    <string name="statefarm">State Farm</string>

    <string name="reverseGeo">Location</string>
    <string name="displayInfo">Information Display</string>

    <string name="add_info">Information</string>
    <string name="hints_details">Driver\'s Information&#8230; \nInsurance Number&#8230;</string>
    <string name="title_activity_location">Map</string>

    <string name="showLocation">Show Location</string>
    <string name="title_activity_blank">BlankActivity</string>
    <string name="title_activity_maps">Map</string>

    <string name="driver_name">Driver\'s Name:</string>
    <string name="plate_number">Plate Number:</string>
    <string name="event_date">Event Date:</string>
    <string name="user_add_info">User\'s Additional Information:</string>

    <string name="event_location">Event Location:</string>

    <string name="vid_location">Video Location: </string>

    <!--ReportList String-->
    <string name="reportid">ReportId: </string>
    <string name="longi">longi: </string>
    <string name="lati">lati: </string>
    <string name="videon">Video Name: </string>
    <string name="news">No news is Good news</string>
</resources>
