<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item android:id="@+id/about"
        app:showAsAction="always"
        android:title="@string/about" />
    <item android:id="@+id/TD"
        app:showAsAction="never"
        android:title="@string/td" />
    <item android:id="@+id/RBC"
        app:showAsAction="never"
        android:title="@string/rbc" />
    <item android:id="@+id/Desj"
        app:showAsAction="never"
        android:title="@string/des" />
    <item android:id="@+id/CAA"
        app:showAsAction="never"
        android:title="@string/caa" />
    <item android:id="@+id/Farm"
        app:showAsAction="never"
        android:title="@string/statefarm" />


</menu>