<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:id="@+id/activity_main"
    android:layout_width="match_parent" android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"

    android:background="@drawable/background">

    <Button
        android:text="@string/log_in"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etUserName"
        android:layout_alignEnd="@+id/etPW"
        android:layout_marginTop="52dp"
        android:id="@+id/btnLogin" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="text|textPersonName"
        android:ems="10"
        android:id="@+id/etUserName"
        android:layout_marginEnd="22dp"
        android:layout_above="@+id/etPW"
        android:layout_alignParentEnd="true"
        tools:ignore="LabelFor" />

    <TextView
        android:text="@string/loginpwBt"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvPW"
        android:layout_alignBottom="@+id/etPW"
        android:layout_toStartOf="@+id/etPW" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:ems="10"
        android:layout_marginBottom="182dp"
        android:id="@+id/etPW"
        android:layout_alignParentBottom="true"
        android:layout_alignStart="@+id/etUserName"
        tools:ignore="LabelFor" />

    <TextView
        android:text="@string/username"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tvUserName"
        android:layout_above="@+id/etPW"
        android:layout_alignStart="@+id/tvPW" />

</RelativeLayout>

