<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/layout_details"
        android:layout_below="@+id/layout_gpsimage"
        android:layout_marginTop="@dimen/layout_dimension"
        android:layout_alignParentStart="true"
        android:background="@drawable/my_border">


        <Button
            android:text="@string/save"
            android:layout_height="wrap_content"
            android:layout_marginEnd="14dp"
            android:layout_marginBottom="11dp"
            android:id="@+id/btnSave"
            android:drawableTop="@drawable/ic_save"
            android:elevation="0dp"
            android:visibility="visible"
            android:background="@drawable/buttonshape"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_width="100dp" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:id="@+id/layPlate"
            android:layout_below="@+id/layDrive"
            android:layout_alignEnd="@+id/btnSave"
            android:layout_marginTop="20dp">

                <TextView
                    android:text="@string/plate_number"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/plateText"
                   />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:ems="10"
                    android:textColorLink="@color/colorEditText"
                    android:id="@+id/etPN" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layAddInfo"
            android:layout_marginBottom="81dp"
            android:layout_above="@+id/btnSave"
            android:layout_alignParentStart="true">


                <TextView
                    android:text="@string/user_add_info"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:id="@+id/userAddInfoText"
                    android:layout_alignTop="@+id/layAddInfo"
                    android:layout_alignParentStart="true" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"
                    android:textColorLink="@color/colorEditText"

                    android:ems="10"
                    android:id="@+id/etAddInfo" />
        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layDate"
            android:layout_below="@+id/layPlate"
            android:layout_alignParentStart="true"
            android:layout_marginTop="12dp">

                <TextView
                    android:text="@string/event_date"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignStart="@+id/textView4"
                    android:id="@+id/dateText"
                    android:layout_below="@+id/textView4" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorLink="@color/colorEditText"

                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/etDate" />


        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/layDrive"
            android:layout_marginTop="30dp"
            android:layout_alignParentTop="true"
            android:layout_alignParentStart="true">

                <TextView
                    android:text="@string/driver_name"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/driverText"

                    android:layout_weight="1" />

                <EditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColorLink="@color/colorEditText"

                    android:inputType="textPersonName"
                    android:ems="10"
                    android:id="@+id/etDriver"
                    android:layout_weight="1" />


        </LinearLayout>


</RelativeLayout>
